real configuration replaced by dummy one

--- a/couchdb.properties
+++ b/couchdb.properties
@@ -1,7 +1,7 @@
-couchdb.name=brisbanetweets
-couchdb.createdb.if-not-exist=false
-couchdb.protocol=http
-couchdb.host=115.146.95.161
+couchdb.name=name
+couchdb.createdb.if-not-exist=true|false
+couchdb.protocol=http|https|...
+couchdb.host=127.0.0.1
 couchdb.port=5984
-couchdb.username=ccc2015
-couchdb.password=t3@m18couchDB
+couchdb.username=
+couchdb.password=
