--- a/config.properties
+++ b/config.properties
@@ -4,19 +4,19 @@
 
 # security parameters
 #....................................................................
-consumerKey=iSiFUys8mjUXN1ENVJIPENKzB
-consumerSecret=IDV62La8X2rqEfnKCh6omrpQVc4X7wC1UItbYCmY1Fty6u51hf
-token=3166310628-DK9rB1b9kogQW6P5SKwEvxJEYaKFHHl2XgR3uEi
-tokenSecret=4rqGRbmZsRYd8I7ndgXEyND2SMwopVpYCJQhdZmHGy2IS
+consumerKey=consumerKey
+consumerSecret=consumerSecret
+token=token
+tokenSecret=tokernSecret
 #....................................................................
 
 # location parameters
 #....................................................................
 # south-west values
-swLatitude=-27.469625
-swLongitude=153.025841
+swLatitude=latitude1
+swLongitude=longitude1
 
 # north-east values
-neLatitude=-27.260690
-neLongitude=153.115469
+neLatitude=latitude2
+neLongitude=longitude2
 #....................................................................
